# qt-camera-demo

./: .gitignore  CMakeLists.txt  README.md
cmake/macos/: Info.plist.in
src/: CameraWidget.cpp  CameraWidget.h  MainWindow.cpp  MainWindow.h  PlatformPermissions.cpp  PlatformPermissions.h  PlatformPermissions_mac.mm  StaticPlugins.cpp  main.cpp
